[project]
name = "webology"
version = "2025.12.1"
description = "My pypi/uvx card"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jeff Triplett", email = "jeff.triplett@gmail.com" },
]
keywords = ["webology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "rich",
    "typer",
]

[project.urls]
Homepage = "https://github.com/jefftriplett/webology"
Code = "https://github.com/jefftriplett/webology"
Funding = "https://github.com/users/jefftriplett/sponsorship"
Issues = "https://github.com/jefftriplett/webology/issues"
Mastodon = "https://mastodon.social/@webology"
Twitter = "https://twitter.com/webology"
"Django Job Board" = "https://djangojobboard.com"

[project.scripts]
webology = "webology:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "black",
    "bumpver",
    "cogapp",
    "flake8",
    "pytest",
    "rich-codex[cairo]",
    "twine",
]

[tool.bumpver]
current_version = "2025.12.1"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"webology.py" = [
    '__version__ = "{version}"',
]
"pyproject.toml" = [
    'version = "{version}"',
]
