[project]
name = "webology"
version = "2026.5.2"
description = "My pypi/uvx card"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jeff Triplett", email = "jeff.triplett@gmail.com" },
]
keywords = ["webology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "rich",
    "typer",
]

[project.urls]
Homepage = "https://github.com/jefftriplett/webology"
Code = "https://github.com/jefftriplett/webology"
Funding = "https://github.com/sponsors/jefftriplett"
Issues = "https://github.com/jefftriplett/webology/issues"
Bluesky = "https://bsky.app/profile/webology.bsky.social"
Mastodon = "https://mastodon.social/@webology"
X = "https://x.com/webology"
"Django Job Board" = "https://djangojobboard.com"
DjangoTV = "https://djangotv.com"
Links = "https://webology.dev"
"Upgrade Django" = "https://upgradedjango.com"

[project.scripts]
webology = "webology:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "bumpver",
    "cogapp",
    "pytest",
    "rich-codex[cairo]",
    "ruff",
    "twine",
]

[tool.bumpver]
current_version = "2026.5.2"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"webology.py" = [
    '__version__ = "{version}"',
]
"pyproject.toml" = [
    'version = "{version}"',
]
