[metadata]
name = webology
version = 2022.11.2
description = My pypi/pipx card 🤗
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
url = https://github.com/jefftriplett/webology
project_urls =
    Code = https://github.com/jefftriplett/webology
    Funding = https://github.com/users/jefftriplett/sponsorship
    Issues = https://github.com/jefftriplett/webology/issues
    Mastodon = https://mastodon.social/@webology
    Twitter = https://twitter.com/webology
license = Apache License 2.0
keywords = webology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license_file = LICENSE

[options]
include_package_data = True
install_requires =
    rich
    typer
packages = find:
py_modules = webology
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    webology = webology:main

[options.packages.find]
exclude=
    tests
    tests.*
